# core-math

./: Cargo.toml  README.md
src/: lib.rs
tests/: sanity.rs
